# entrix_bank_api_case

./: .gitignore  Dockerfile  README.md  pyproject.toml
bankAPI/: alembic.ini  main.py
bankAPI/alembic/: env.py
bankAPI/alembic/db/: db.py  db_modeling.yml  exceptions.py  models.py  utility.py
bankAPI/alembic/versions/: 3a185f0c7909_redo_migration_from_stratch.py  df9e96ee3693_update_table_changes_and_cleanup.py
bankAPI/app/routes/: accounts.py  customers.py  transactions.py
bankAPI/model/: accounts.py  address.py  biography.py  contact.py  customers.py  gender.py  internalEmployer.py  transactions.py  utility.py
bankAPI/utility/: logger.py
tests/: conftest.py
tests/models/: test_accounts.py  test_customerIn.json  test_customers.py  test_transactions.py
tests/routes/: test_createCustomer.py
