############################################################
#This is for Entrix backend API service: banking-api-obpmev#
############################################################


[tool.poetry]
name = "bankAPI"
version = "1.0.0"
license = "MIT"
description = "Entrix backend banking API service."
authors = [
    "Chloe Ji <chloejiy@gmail.com>"
    ]
readme = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
pydantic = {version= "^2.10.6", extras = ["email"]}
fastapi = "^0.115.11"
typer = "^0.15.2"
tomlkit = "^0.13.2"
httpx = "^0.28.1"
python-jose = "^3.4.0"
passlib = "^1.7.4"
ruff = "^0.9.10"
hypothesis = "^6.127.9"
pgcli = "^4.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
uvicorn = "^0.34.0"
alembic = "^1.15.1"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
mimesis = "^18.0.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0"

# Python-style entrypoints to run server
[tool.poetry.scripts]
package_cli = 'bankAPI.main:app'

[tool.urls]
repository = "http://entrix-lcvcpx@git.codesubmit.io/entrix/banking-api-obpmev"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv"]
fix = true
include = ["*.py"]
indent-width = 4

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904', "E501", "F403", "D100", "F821"]
pydocstyle = { convention = 'google' }

[tool.ruff.format]
quote-style = 'single'

[tool.codespell]
skip = '.git,env*,pydantic/v1/*,uv.lock'
ignore-words-list = 'gir,ser,crate'

[tool.mypy]
strict = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
show_error_codes = true
show_column_numbers = true

[tool.poetry.extras]
pgsql = ["psycopg2"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"